Add reference pitch

--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -4,6 +4,7 @@
     <string name="settings">Configurações</string>
     <string name="notation">Notação</string>
     <string name="precision">Precisão</string>
+    <string name="reference_pitch">Reference</string>
     <string name="advanced_mode">Modo Avançado</string>
     <string name="show_secondary_data">Exibe dados secundários, como oitava e frequência</string>
     <string name="noise_suppressor">Supressor de Ruído</string>
